Included (made available) css and javascript files in HTML document. And set the tab title.

--- a/app.html
+++ b/app.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Pomodoro</title>
+    <link rel=stylesheet type="text/css" href="styles.css">
 </head>
 <body>
 
+<script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
