Added basic necessary html elements. A button and a label.

--- a/app.html
+++ b/app.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 
+    <div id="display">
+        "Some filler text"
+    </div>
+
+    <button id="actionButton">
+        Start Pomodoro
+    </button>
+
 <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
