Wrapped basic components in a "wrapping_div" and centered it on the page.

--- a/app.html
+++ b/app.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 
-    <div id="display">
-        "Some filler text"
-    </div>
+    <div id="wrapping_div">
 
-    <button id="actionButton">
-        Start Pomodoro
-    </button>
+        <div id="display">
+            "Some filler text"
+        </div>
+
+        <button id="actionButton">
+            Start Pomodoro
+        </button>
+
+    </div>
 
 <script type="text/javascript" src="scripts.js"></script>
 </body>
