"Connected" HTML and javascript.

--- a/app.html
+++ b/app.html
@@ -10,10 +10,10 @@
     <div id="wrapping_div">
 
         <div id="display">
-            "Some filler text"
+            00:00:00
         </div>
 
-        <button id="actionButton">
+        <button id="actionButton" onclick="onActionButtonClicked()">
             Start Pomodoro
         </button>
 
