--- a/app.html
+++ b/app.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Pomodoro</title>
     <link rel=stylesheet type="text/css" href="styles.css">
+
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.brown-red.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
 <body>
 
@@ -19,6 +23,7 @@
 
     </div>
 
-<script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
 </body>
 </html>
