Applied mdl (material design lite) to actionButton.

--- a/app.html
+++ b/app.html
@@ -17,8 +17,11 @@
             00:00:00
         </div>
 
-        <button id="actionButton" onclick="onActionButtonClicked()">
-            Start Pomodoro
+        <button id="actionButton"
+                onclick="onActionButtonClicked()"
+                class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <i id="actionButtonIcon"
+               class="material-icons">play_arrow</i>
         </button>
 
     </div>
