Added two sliders for setting work and rest time.

--- a/app.html
+++ b/app.html
@@ -46,20 +46,42 @@
                 <div class="mdl-grid">
                     <!-- Spacers on both sides to center again -->
                     <div class="mdl-layout-spacer"></div>
-
                     <div class="mdl-cell mdl-cell--4-col">
-
                         <h3 id="display">
                             00:00:00
                         </h3>
-
                     </div>
+                    <div class="mdl-layout-spacer"></div>
+                </div>
 
+                <div class="mdl-grid">
+                    <div class="mdl-layout-spacer"></div>
+                    <div class="mdl-cell mdl-cell--4-col">
+                        <p class="range-field">
+                            <label id="workTimeLbl"
+                                   for="workTime">Work Time</label>
+                            <input id="workTime" class="mdl-slider mdl-js-slider" type="range"
+                                   min="0" max="100" value="25" tabindex="0" onchange="setSetting('workT', this.value)"/>
+                        </p>
+                    </div>
+                    <div class="mdl-layout-spacer"></div>
+                </div>
+
+                <div class="mdl-grid">
+                    <div class="mdl-layout-spacer"></div>
+                    <div class="mdl-cell mdl-cell--4-col">
+                        <!-- Slider with Starting Value -->
+                        <p class="range-field">
+                            <label id="restTimeLbl"
+                                   for="restTime">Rest Time</label>
+                            <input id="restTime" class="mdl-slider mdl-js-slider" type="range"
+                                   min="0" max="100" value="25" tabindex="0" onchange="setSetting('restT', this.value)"/>
+                        </p>
+                    </div>
                     <div class="mdl-layout-spacer"></div>
                 </div>
 
             </div>
-
         </main>
 
         <!--The button is outside main only because it is a fixed absolutely positioned element. (always at the bottom of page)-->
