--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <link rel=stylesheet type="text/css" href="styles.css">
 
     <!-- These are for including material design lite -->
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.brown-red.min.css" />
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.grey-orange.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
@@ -26,7 +26,7 @@
 
         <!--This is the header (top bar)-->
         <header class="mdl-layout__header">
-            <div class="mdl-layout__header-row"
+            <div class="mdl-layout__header-row mdl-shadow--2dp "
                  style="padding: 0"> <!-- Hacky... -->
 
                 <!-- Title
@@ -45,7 +45,8 @@
                 <!-- Your content goes here -->
 
                 <!-- A grid system is used, read more: http://www.getmdl.io/components/index.html#layout-section/grid -->
-                <div class="mdl-grid">
+                <div id="displayContainer"
+                     class="mdl-grid mdl-shadow--2dp">
                     <!-- Spacers on both sides to center again -->
                     <div class="mdl-layout-spacer"></div>
                     <div class="mdl-cell mdl-cell--4-col">
@@ -54,6 +55,21 @@
                         </h3>
                     </div>
                     <div class="mdl-layout-spacer"></div>
+                </div>
+
+                <div class="mdl-grid"
+                     style="height: 10px">
+                    <div class="mdl-layout-spacer"></div>
+                    <div class="mdl-cell mdl-cell--1-col">
+                        <!--The button is outside main only because it is a fixed absolutely positioned element. (always at the bottom of page)-->
+                        <button id="actionButton"
+                                onclick="onActionButtonClicked()"
+                                class="fixed-bottom-fab mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect
+                                       mdl-button--colored mdl-shadow--8dp">
+                            <i id="actionButtonIcon"
+                               class="material-icons">play_arrow</i>
+                        </button>
+                    </div>
                 </div>
 
                 <div class="mdl-grid">
@@ -85,14 +101,6 @@
 
             </div>
         </main>
-
-        <!--The button is outside main only because it is a fixed absolutely positioned element. (always at the bottom of page)-->
-        <button id="actionButton"
-                onclick="onActionButtonClicked()"
-                class="fixed-bottom-fab mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-            <i id="actionButtonIcon"
-               class="material-icons">play_arrow</i>
-        </button>
 
     </div>
 
